# window_update_blocker

./: Cargo.toml  build.rs
.github/workflows/: rust.yml
libs/own_logger/: Cargo.toml
libs/own_logger/src/: gol.rs  lib.rs  macros.rs  panic_hook.rs
src/: kill_update.rs  lib.rs  logging.rs  main.rs  service.rs
src/os/: windows.rs
