[package]
name = "windows_update_blocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
own-logger = { path = "libs/own_logger" }
# own-runtime = { path="libs/own_runtime" }
# own-measure = { path="libs/own_measure" }
# own-sdk = { path="libs/own_sdk" }

clap = { version = "4.2", features = ["derive"] }
once_cell = "1.18.0"
tokio = { version = "1.34.0", default-features = false, features = [
  "full",
  "tracing",
] }
tokio-stream = { version = "0.1.14", default-features = false, features = [
  "net",
  "sync",
  "time",
] }
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.9.4" }
cron = "0.12.0"
convert_case = "0.6.0"
splitty = "1.0.1"
tempfile = "3.8.1"
anyhow = "1.0.79"
is-terminal = "0.4.7"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { version = "0.1.40", default-features = false }

winreg = "0.11"
windows-service = "0.6"
winapi = { version = "0.3.9", features = ["winuser", "tlhelp32", "handleapi", "restartmanager", "securitybaseapi"] }
windows-sys = { version = "0.52.0", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Power",
  "Win32_System_RemoteDesktop",
  "Win32_System_Services",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_UI_WindowsAndMessaging",
] }

[workspace]
members = [
  "libs/own_logger",
  # "libs/own_runtime",
  # "libs/own_measure",
  # "libs/own_sdk",
]