[package]
name = "own-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
tokio-console = ["console-subscriber", "tokio/tracing"]
deadlock_detection = ["parking_lot"]

[dependencies]
once_cell = "1.10"
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
console-subscriber = { version = "0.2.0", optional = true }
opentelemetry = { version = "0.21.0", default-features = false, features = [
    "trace",
] }
opentelemetry-jaeger = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio"] }
backtrace = "0.3"
parking_lot = { version = "0.12", features = [
    "deadlock_detection",
], optional = true }

tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-futures = { version = "0.2", features = ["futures-03"] }
tracing-log = "0.2.0"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

flexi_logger = { version = "0.27.3", features = ["colors", "compress", "trc", "async"] }
chrono = "0.4.31"
anyhow = "1.0.79"